# Shared-agent-toolkit

./: .gitignore  LICENSE  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  install.sh
adapters/: cursor_adapter.py  requirements.txt
agents/: code-reviewer.md  deployment-agent.md  estimator-agent.md  research-agent.md  security-audit-agent.md
commands/common/: git-branch.md
commands/construction/: takeoff.md
commands/dev/: review.md
commands/dev/refactor/: extract-function.md  remove-duplication.md  simplify.md
docs/: ARCHITECTURE.md  CHECKLIST-PATTERNS.md  CONTRIBUTING.md  QUICKSTART.md
mcp-servers/construction-toolkit/: README.md  pyproject.toml  server.py
mcp-servers/example-mcp/: README.md  pyproject.toml  server.py
skills/excel-automation/: SKILL.md
skills/excel-automation/scripts/: excel_reader.py
skills/pdf-extraction/: SKILL.md
skills/pdf-extraction/scripts/: extract_text.py
